# piecewise-affine-ARO

./: CMakeLists.txt  README.md
helpers/: Logger.cpp  Logger.h  helpers.cpp  helpers.h
models/: ROModel.cpp  ROModel.h  SOCModel.cpp  SOCModel.h  UncertaintySet.cpp  UncertaintySet.h
models/basic_model_objects/: AffineExpression.h  AffineExpression.tplt  Constraint.h  Constraint.tplt  DecisionVariable.cpp  DecisionVariable.h  LinearExpression.h  LinearExpression.tplt  NormedAffineVector.h  NormedAffineVector.tplt  Objective.tplt  ObjectiveBase.h  RawConstraint.h  RawConstraint.tplt  RoAffineExpression.cpp  RoAffineExpression.h  RoAffineExpression.tplt  SOCConstraint.h  SOCConstraint.tplt  SOCExpression.h  SOCExpression.tplt  SOCVariable.cpp  SOCVariable.h  SOSConstraint.cpp  SOSConstraint.h  ScaledVariable.h  ScaledVariable.tplt  SolutionRealization.cpp  SolutionRealization.h  UncertaintyScaledDecision.cpp  UncertaintyScaledDecision.h  UncertaintyVariable.cpp  UncertaintyVariable.h  VariableBase.h  VariableBase.tplt  VariableReference.h  VariableReference.tplt  predeclarations_and_concepts.h  types_and_constants.h
solvers/: SolverBase.cpp  SolverBase.h
solvers/aro_policy_solvers/: AROPolicySolverBase.cpp  AROPolicySolverBase.h  AffineAdjustablePolicySolver.cpp  AffineAdjustablePolicySolver.h  BGPiecewiseLinearPolicySolver.cpp  BGPiecewiseLinearPolicySolver.h  BGPiecewiseLinearPolicySolver.tplt  DominatingPolicySolver.cpp  DominatingPolicySolver.h  LiftingPolicySolver.cpp  LiftingPolicySolver.h
solvers/soc_solvers/: GurobiSOCSolver.cpp  GurobiSOCSolver.h  SOCSolverBase.cpp  SOCSolverBase.h
tests/domination_tests/: demand_covering_test.cpp  gaussian_test.cpp
tests/domination_tests/demand_covering/: DemandCoveringInstanceGenerator.cpp  DemandCoveringInstanceGenerator.h  DemandCoveringProblem.cpp  DemandCoveringProblem.h
tests/domination_tests/gaussian/: GaussianInstanceGenerator.cpp  GaussianInstanceGenerator.h
tests/test_helpers/: InstanceGeneratorBase.cpp  InstanceGeneratorBase.h  ParallelInstanceEvaluator.cpp  ParallelInstanceEvaluator.h
